@@ -15,13 +15,13 @@ Build-Depends: appstream,
                gsettings-desktop-schemas-dev (>= 3.18),
                gtk-doc-tools,
                intltool (>= 0.35.0),
-               libappstream-glib-dev (>= 0.7.0~),
+               libappstream-glib-dev (>= 0.7.3),
                libflatpak-dev (>= 0.6.12) [linux-any],
-               libfwupd-dev (>= 0.9.7) [amd64 arm64 armhf i386],
+               libfwupd-dev (>= 0.9.8) [amd64 arm64 armhf i386],
                libglib2.0-dev (>= 2.46),
                libgnome-desktop-3-dev (>= 3.18),
-               libgtk-3-dev (>= 3.20),
-               libgtkspell3-3-dev (>= 3.0),
+               libgtk-3-dev (>= 3.22.4),
+               libgspell-1-dev,
                libgudev-1.0-dev [linux-any],
                libjson-glib-dev,
                liblimba-dev (>= 0.5.6) [linux-any],
