@@ -9,7 +9,7 @@ GS_CONFIGURE_FLAGS = \
 	-Denable-odrs=true \
 	-Denable-ostree=false \
 	-Denable-packagekit=true \
-	-Denable-rpm=false \
+	-Denable-rpm-ostree=false \
 
 # these are conditionally re-enabled later
 GS_CONFIGURE_FLAGS += \
@@ -89,7 +89,6 @@ override_dh_missing:
 	# These files are split out to separate packages
 	rm -f debian/gnome-software/usr/lib/*/gs-plugins-*/libgs_plugin_flatpak*
 	rm -f debian/gnome-software/usr/lib/*/gs-plugins-*/libgs_plugin_limba*
-	rm -f debian/gnome-software/usr/lib/*/gs-plugins-*/libgs_plugin_ostree*
 	rm -f debian/gnome-software/usr/lib/*/gs-plugins-*/libgs_plugin_snap*
 	rm -f debian/gnome-software/usr/share/metainfo/org.gnome.Software.Plugin.Flatpak.metainfo.xml
 	rm -f debian/gnome-software/usr/share/metainfo/org.gnome.Software.Plugin.Limba.metainfo.xml
