@@ -1,6 +1,10 @@
 gnome-software (3.27.90-1) UNRELEASED; urgency=medium
 
   * New upstream development release
+  * Bump dependencies for new version:
+    - libappstream-glib-dev (>= 0.7.3), libfwupd (>= 0.9.8),
+      libgtk-3-dev (>= 3.22.4)
+  * Build-Depend on libgspell-1-dev instead of libgtkspell3-3-dev
 
  -- Jeremy Bicha <jbicha@debian.org>  Sun, 18 Feb 2018 16:09:00 -0500
 
